--- a/CEP/BB/doc/bb-implementation/definitions.tex
+++ b/CEP/BB/doc/bb-implementation/definitions.tex
@@ -1,7 +1,7 @@
 %
 % Define the information of the page header
 %
-\renewcommand{\theAuthor}  {D.\ Hoogland}
+\renewcommand{\theAuthor}  {D.\ Highland}
 \renewcommand{\theDOIssue} {2002-Feb-27}
 \renewcommand{\theKOIssue} {Public}
 \renewcommand{\theStatus}  {Draft}
