--- a/CEP/BB/doc/bb-requirements/bb-requirements.tex
+++ b/CEP/BB/doc/bb-requirements/bb-requirements.tex
@@ -20,6 +20,10 @@
 
   \begin{abstract}
 
+    \em{The use of the Blackboard architectural pattern,
+      in the LOFAR Central Processor,
+      for the selfcal control system}
+
     For the LOFAR project a self-calibration program shall be written
     \hyperlink{LOFAR-ASTRON-ADD-006}{[LOFAR-ASTRON-ADD-006]}. The idea
     is that this program will have the architectural structure of a
@@ -31,7 +35,7 @@
   \end{abstract}
 
   \section{the blackboard architectural pattern}
-  \label{id2719941}\hypertarget{id2719941}{}%
+  \label{sec:blackboard-architectural-pattern}
 
     The Blackboard pattern as shown in literature has many
     applications. They differ greatly in nature. The main feature of
@@ -41,9 +45,9 @@
     they can to get nearer to the solution, and put the results back
     to that central place.
 
-    As described in \hyperlink{bib-Design-Alternatives}{[Design Alternatives]}, there are
+    As described in \hyperlink{bib:Design-Alternatives}{[Design Alternatives]}, there are
     several levels at which to implement parallel Blackboard
-    systems. In \hyperlink{PDR-CEP-Software}{[PDR-CEP-Software]} it is
+    systems. In \hyperlink{bib:PDR-CEP-Software}{[PDR-CEP-Software]} it is
     described how this applies to the imaging applications in the
     LOFAR Central Processor.
 
@@ -77,7 +81,7 @@
     \end{em}
 
   \section{LOFAR requirements on the selfcal control system}
-  \label{section-LOFAR-requirements}\hypertarget{section-LOFAR-requirements}{}%
+  \label{sec:LOFAR-requirements}\hypertarget{sec:LOFAR-requirements}{}%
 
     LOFAR is a one-of system. There has never been anything build like
     it. The self-calibration solutions that instrumentalists and
@@ -142,7 +146,7 @@
     idea to have them implemented as servers. This can for instance be
     done by running them as unix-demons on nodes that might be used as
     hosts to the predict/solve knowledge
-    sources. \hyperlink{bib-Efficiency}{[Efficiency]} describes the
+    sources. \hyperlink{bib:Efficiency}{[Efficiency]} describes the
     usefulness of this principle. However it is not to be expected
     that this will greatly enhance the execution speed as suggested in
     this paper, as our knowledge-sources will have longer execution
@@ -155,22 +159,68 @@
     engine.
 
   \section{selfcal use of the blackboard pattern}
-  \label{id2712500}\hypertarget{id2712500}{}%
+  \label{sec:selfcal-use-blackboard}
   \begin{figure}
     \includegraphics[]{../figures/blackboard-use_concept.eps}
-    \hypertarget{figure-blackboard-use}{}
+    \hypertarget{fig:blackboard-use}{}
     \caption{the way the BlackBoard will be used to monitor several
-    solution threads\label{figure-blackboard-use}}
+    solution threads\label{fig:blackboard-use}}
   \end{figure}
 
+    \subsection{pattern components}
+    \label{subsec:pattern-components}
+
+      \begin{figure}
+        \includegraphics[]{../figures/overview.eps}
+        \hypertarget{fig:overview}{}
+        \caption{the crude structure of a selfcal-BlackBoard\label{fig:overview}}
+      \end{figure}
+
+      In \hyperlink{fig:overview}{[Figure \ref{fig:overview}]}, the
+      communication from the TreadController or the ThreadWatcher to
+      the WorkerProxy and back is all done by means of the BlackBoard.
+
+      The items in the diagram are \begin{itemize}
+
+      \item \em{Blackboard}: Has ownership of all control -data and knowledge of all
+      user data. It starts by deploying the needed knowledge sources
+      and by forking if the strategy so commands. It is not an active
+      object. It reacts to requests from the rest of the world. An
+      implementation could be a tcp-server application.
+
+      \item \em{ThreadWatcher}: Has responsibility over a number of
+      solution threads. The thread watcher compares states of solution
+      threads and decides if one more promising then the other.
+
+      \item \em{ThreadController}: Has responsibility over a single
+      solution thread. The thread controller create new lines of work
+      and workloads and check if they lead to satisfying result.
+
+
+      \item \em{WorkerProxy}: Polls for work to do in the
+      database.(pull, push is more desirable. Can be done when the
+      database supports action paradigm/trigger) It has an abstract
+      function, e.g. "perform" that starts applying the real
+      knowledge.
+
+      \item \em{SelfcalWrapper}: Triggers the selfcal engine by means of its "perform"
+      function. It puts the status of the real knowledge-source on the
+      blackboard, when it changes. It also writes back results to the
+      blackboard if needed.
+
+      \item \em{selfcal engine}: The actual (external) program that
+      can perform a series of calibration steps.
+
+      \end{itemize}
+
     \subsection{a demo use-case}
-    \label{id2719741}\hypertarget{id2719741}{}%
+    \label{sec:demo-usecase}
       \subsubsection{logical structure}
-      \label{id2719712}\hypertarget{id2719712}{}%
+      \label{subsec:logical-structure}
       \begin{figure}
         \epsfig{file=../figures/demo.usecase.eps}
         \hypertarget{demo-usecase}{}
-        \caption{the basic use-case for the self-calibration application\label{figure-demo-usecase}}
+        \caption{the basic use-case for the self-calibration application\label{fig:demo-usecase}}
       \end{figure}
 
       This use-case is intended to demonstrate the use of the
@@ -178,8 +228,8 @@
       selfcal controller.
 
       It will show that concurrent solution threads as shown in
-      \hyperlink{figure-blackboard-use}{Figure
-      \ref{figure-blackboard-use}} are feasible to implement.
+      \hyperlink{fig:blackboard-use}{Figure
+      \ref{fig:blackboard-use}} are feasible to implement.
 
       The demo starts with the selection of a strategy, which
       currently is hand-/hard-coded in a python script. The strategy
@@ -223,7 +273,7 @@
       \begin{table}[hbt]
         \begin{center}%
           \hypertarget{parametertable}{}%
-          \caption{parameters used, responsibilities and end-results}
+          \caption{parameters used, responsibilities and end-results\label{tab:parametertable}}
           \begin{tabular}{|c|c|c|c|c|c|}
             \hline 
             parameter & assigned to 1 & to 2 & to 3 & modelled value & result\tabularnewline
@@ -253,7 +303,6 @@
             & & & & & 26.8203983307 \tabularnewline
             \hline
           \end{tabular}
-          \label{parametertable}
         \end{center}
       \end{table}
 
@@ -266,7 +315,7 @@
      
       \end{em}
 
-      In \hyperlink{parametertable}{parametertable} the
+      In \hyperlink{tab:parametertable}{[Table \ref{tab:parametertable}]} the
       column ``model value'' stands for ``value according to global
       sky- or instrument model''
 
@@ -274,16 +323,16 @@
       puts some inter-dependency in the parameters.
 
     \subsection{implementation}
-    \label{id2721359}\hypertarget{id2721359}{}%
+    \label{subsec:implementation}
 
       \subsubsection{demo prerequisites}
-      \label{id2721362}\hypertarget{id2721362}{}%
+      \label{subsubsec:demo-prerequisites}
 
         For the breadboard implementation python 2.3b1 was used.  As
         well as postgresql 7.3.3.  At compile-time swig-1.3.19 is used.
 
       \subsubsection{The strategy}
-      \label{id2721371}\hypertarget{id2721371}{}%
+      \label{subsubsec:stategy}
         A high level script
 
         The implementation of the strategy is a python script using
@@ -296,7 +345,7 @@
         possibility to watch progress on-line and intervene if needed.
 
       \subsubsection{the solver}
-      \label{id2721390}\hypertarget{id2721390}{}%
+      \label{subsubsec:solver}
         A c++ stub
 
         The code that makes parameters converge is:
@@ -308,20 +357,21 @@ outparams[i] = itsParamValues[i] = 0.8*(itsParamValues[i] + i + 1) +
 
         As can see neighbouring parameters are taken into account to
         emulate interdependencies. The full code can be found in
-        \hyperlink{stub-code}{Appendix {\ref*{stub-code}}}
+        \hyperlink{stub-code}{Appendix {\ref*{app:stub-code}}}
 
     \subsection{results}
-    \label{id2721411}\hypertarget{id2721411}{}%
+    \label{subsec:results}
 
       \subsubsection{resulting graphs}
+      \label{subsubsec:resulting-graphs}
 
       \begin{figure}
         \includegraphics[]{../figures/results.eps}
-        \hypertarget{results}{}%
-        \caption{the full set of results evolving through time\label{results}}
+        \hypertarget{fig:results}{}
+        \caption{the full set of results evolving through time\label{fig:results}}
       \end{figure}
 
-      In \hyperlink{results}{figure \ref{results}} several parameters
+      In \hyperlink{fig:results}{figure \ref{fig:results}} several parameters
       can be seen that are not being solved for. These are exchanged
       from the engine that does solve for them to the engines that
       don't. for instance the pink and green lines that stay near 78
@@ -331,21 +381,21 @@ outparams[i] = itsParamValues[i] = 0.8*(itsParamValues[i] + i + 1) +
 
       \begin{figure}
         \includegraphics[]{../figures/param1.eps}
-        \hypertarget{param1}{}%
-        \caption{the results on parameter number one for the three engines evolving through time\label{param1}}
+        \hypertarget{fig:param1}{}
+        \caption{the results on parameter number one for the three engines evolving through time\label{fig:param1}}
       \end{figure}
 
-      In \hyperlink{param1}{figure \ref{param1}} the relevant
+      In \hyperlink{fig:param1}{figure \ref{fig:param1}} the relevant
       evolutions of parameters having to do with parameter \#1 can be
       seen.
 
       \begin{figure}
         \includegraphics[]{../figures/1st.eps}
-        \hypertarget{1st}{}%
-        \caption{the results of the first engine evolving through time\label{1st}}
+        \hypertarget{fig:1st}{}
+        \caption{the results of the first engine evolving through time\label{fig:1st}}
       \end{figure}
 
-      In \hyperlink{1st}{figure \ref{1st}} the solution threads of the
+      In \hyperlink{fig:1st}{figure \ref{fig:1st}} the solution threads of the
       first engine can be seen. As parameter \#1 somewhat depends on
       parameter \#2, and engine 1 uses 78 instead of 8 to begin with,
       it's solution is going totally the wrong way. As the semi-good
@@ -354,32 +404,33 @@ outparams[i] = itsParamValues[i] = 0.8*(itsParamValues[i] + i + 1) +
 
       \begin{figure}
         \includegraphics[]{../figures/2nd.eps}
-        \hypertarget{2nd}{}%
-        \caption{the results of the second engine evolving through time\label{2nd}}
+        \hypertarget{fig:2nd}{}
+        \caption{the results of the second engine evolving through time\label{fig:2nd}}
       \end{figure}
 
-      in \hyperlink{2nd}{figure \ref{2nd}} the same thing happens but
+      in \hyperlink{2nd}{figure \ref{fig:2nd}} the same thing happens but
       in this case the value of parameter \#2 drags the value of
       parameter \#3 beyond the value that was expected.
 
       \begin{figure}
         \includegraphics[]{../figures/3rd.eps}
-        \hypertarget{3rd}{}%
-        \caption{the results of the third engine evolving through time\label{3rd}}
+        \hypertarget{fig:3rd}{}%
+        \caption{the results of the third engine evolving through time\label{fig:3rd}}
       \end{figure}
 
       \begin{figure}
         \includegraphics[]{../figures/param3.eps}
-        \hypertarget{param3}{}%
-        \caption{the results on parameter number one for the three engines evolving through time\label{param3}}
+        \hypertarget{fig:param3}{}%
+        \caption{the results on parameter number one for the three engines evolving through time\label{fig:param3}}
       \end{figure}
 
     \subsection{evaluation}
-    \label{subsection-evaluation}\hypertarget{subsection-evaluation}{}%
+    \label{subsec:evaluation}\hypertarget{subsec:evaluation}{}
 
       Figure out a priority mechanism.
 
   \section{lessons learned}
+  \label{sec:lessons-learned}
 
     It seems hard to find an example of a implementation of a
     Blackboard system that compares to this one. The facts, that there
@@ -398,9 +449,9 @@ outparams[i] = itsParamValues[i] = 0.8*(itsParamValues[i] + i + 1) +
 \appendix
 
   \dbappendix{requirements list}
-  \label{requirements list}\hypertarget{requirements list}{}%
+  \label{app:requirements-list}\hypertarget{app:requirements-list}{}%
 
-    \begin{itemize}
+    \begin{enumerate}
 
       \item
 
@@ -416,10 +467,10 @@ outparams[i] = itsParamValues[i] = 0.8*(itsParamValues[i] + i + 1) +
         It would be nice to have a library of strategies that would
         include "conditions" and "actions to take".
 
-    \end{itemize}
+    \end{enumerate}
 
   \dbappendix{strategy}
-  \label{start script}\hypertarget{start script}{}%
+  \label{app:start-script}\hypertarget{app:start-script}{}
 
 \begin{Verbatim}[]
 #!/usr/bin/env python
@@ -549,7 +600,7 @@ print "this is the end"
 \end{Verbatim}
 
   \dbappendix{solver\ stub\ code}
-  \label{stub-code}\hypertarget{stub-code}{}%
+  \label{app:stub-code}\hypertarget{app:stub-code}{}
 
 \begin{Verbatim}[]
 //  SelfcalEngineStub.h: one line description
@@ -629,7 +680,7 @@ void SelfcalEngineStub::dump() {
 \end{Verbatim}
 
   \dbappendix{revision log}
-  \label{revisionLog}\hypertarget{revisionLog}{}%
+  \label{app:revisionLog}\hypertarget{app:revisionLog}{}%
 
     Hand copy log entries from the cvs log, or make up your own.
 
@@ -654,36 +705,36 @@ void SelfcalEngineStub::dump() {
       0-12-379940-6,
       Academic Press Inc.,
       xix-xxix.
-      \label{bib-nii}
+      \label{bib:nii}
 
     \bibitem[Design Alternatives]{Design Alternatives}
       \emph{Design Alternatives for Paralel and Distributed Blackboard Systems} ,
       Daniel Corkill.
-      \label{bib-Design-Alternatives}
+      \label{bib:Design-Alternatives}
 
     \bibitem[Efficiency]{Efficiency}
       \emph{EFFICIENCY MECHANISMS FOR A CLASS OF BLOACKBOARD SYSTEMS} ,
       Ratikorn Hewett and Micheal Hewett.
-      \label{bib-Efficiency}
+      \label{bib:Efficiency}
 
     \bibitem[LOFAR-ASTRON-ADD-006]{LOFAR-ASTRON-ADD-006}
       \emph{LOFAR Architectural Design Document} ,
       Kjeld van der Schaaf,
       Copyright \copyright{} 2002 ASTRON.
-      \label{LOFAR-ASTRON-ADD-006}
+      \label{bib:LOFAR-ASTRON-ADD-006}
 
     \bibitem[LOFAR-ASTRON-MEM-035]{LOFAR-ASTRON-MEM-035}
       \emph{CEP Requirements Analysis, Architectural Design and
       Description} ,
       Kjeld van der Schaaf,
       Copyright \copyright{} 2002 ASTRON.
-      \label{LOFAR-ASTRON-MEM-035}
+      \label{bib:LOFAR-ASTRON-MEM-035}
 
     \bibitem[PDR-CEP-Software]{PDR-CEP-Software}
       \emph{CEP Software implementations} ,
       Kjeld van der Schaaf,
       Copyright \copyright{} 2003 ASTRON.
-      \label{PDR-CEP-Software}
+      \label{bib:PDR-CEP-Software}
 
   \end{thebibliography}
 
